--- a/index.html
+++ b/index.html
@@ -879,5 +879,63 @@
     <script src="./js/vendor/popprjs.min.js"></script>
     <script src="./js/vendor/tippy.min.js"></script>
     <script src="./js/main.js" type="module"></script>
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-consent-banner" class="cookie-banner" style="display: none">
+      <div class="cookie-banner__content">
+        <div class="cookie-banner__text">
+          <p>
+            Мы используем файлы cookie, чтобы улучшить работу сайта и
+            предоставить вам лучший опыт. Продолжая использовать сайт, вы
+            соглашаетесь с
+            <a href="/privacy-policy">политикой конфиденциальности</a>.
+          </p>
+        </div>
+        <div class="cookie-banner__actions">
+          <button
+            id="cookie-accept"
+            class="cookie-banner__btn cookie-banner__btn--primary"
+          >
+            Принять
+          </button>
+          <button
+            id="cookie-decline"
+            class="cookie-banner__btn cookie-banner__btn--secondary"
+          >
+            Отклонить
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        // Проверяем, показывали ли уже уведомление
+        if (!localStorage.getItem("cookieConsent")) {
+          // Показываем баннер через 1 секунду
+          setTimeout(function () {
+            document.getElementById("cookie-consent-banner").style.display =
+              "block";
+          }, 1000);
+        }
+
+        // Кнопка "Принять"
+        document
+          .getElementById("cookie-accept")
+          .addEventListener("click", function () {
+            localStorage.setItem("cookieConsent", "accepted");
+            document.getElementById("cookie-consent-banner").style.display =
+              "none";
+          });
+
+        // Кнопка "Отклонить"
+        document
+          .getElementById("cookie-decline")
+          .addEventListener("click", function () {
+            localStorage.setItem("cookieConsent", "declined");
+            document.getElementById("cookie-consent-banner").style.display =
+              "none";
+          });
+      });
+    </script>
   </body>
 </html>
