--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
           </div>
 
           <div class="benefits-grid">
-            <!-- Карточка 1 - Индивидуальный подход (вместо экспертизы) -->
+            <!-- Карточка 1 - Индивидуальный подход -->
             <div class="benefit-card">
               <div class="benefit-icon-wrapper">
                 <div class="benefit-icon">
@@ -647,16 +647,16 @@
               </div>
             </div>
 
-            <!-- Карточка 5 - Поддержка и обучение -->
-            <div class="benefit-card tech-card">
+            <!-- Карточка с подарком -->
+            <div class="benefit-card">
               <div class="benefit-icon-wrapper">
                 <div
                   class="benefit-icon"
                   style="background: linear-gradient(135deg, #ff6b6b, #f03e3e)"
                 >
-                  <i class="fas fa-graduation-cap"></i>
+                  <i class="fas fa-gift"></i>
                 </div>
-                <div class="tech-badge">Бонус</div>
+                <div class="tech-badge gift">Бонус</div>
               </div>
               <h3 class="benefit-title">Обучение и поддержка</h3>
               <p class="benefit-description">
@@ -664,18 +664,17 @@
                 контент, смотреть статистику. Вы не будете зависеть от
                 разработчиков
               </p>
-              <!-- <div class="tech-demo">
+              <div class="tech-demo">
                 <span class="tech-status status-active">
                   <i class="fas fa-circle"></i> Видеоуроки
                 </span>
-                <a href="#" class="tech-link"
-                  >Пример обучения <i class="fas fa-arrow-right"></i
-                ></a>
-              </div> -->
+                <a href="#" class="tech-link">
+                  Пример обучения <i class="fas fa-arrow-right"></i>
+                </a>
+              </div>
             </div>
-
             <!-- Карточка 6 - Адаптивность и современность -->
-            <div class="benefit-card tech-card">
+            <div class="benefit-card">
               <div class="benefit-icon-wrapper">
                 <div
                   class="benefit-icon"
@@ -683,20 +682,23 @@
                 >
                   <i class="fas fa-mobile-alt"></i>
                 </div>
-                <div class="tech-badge">Тренд</div>
+                <div class="benefit-stat">Тренд</div>
               </div>
               <h3 class="benefit-title">Современные стандарты</h3>
               <p class="benefit-description">
                 Сайты, которые идеально выглядят на всех устройствах, быстро
                 грузятся и соответствуют последним трендам веб-дизайна
               </p>
-              <div class="tech-demo">
-                <span class="tech-status status-active">
-                  <i class="fas fa-circle"></i> Mobile First
-                </span>
-                <a href="#" class="tech-link"
-                  >Примеры работ <i class="fas fa-arrow-right"></i
-                ></a>
+              <div class="benefit-tags">
+                <span class="benefit-tag">Mobile First</span>
+                <span class="benefit-tag">Адаптивность</span>
+                <span class="benefit-tag">Быстрая загрузка</span>
+              </div>
+              <div class="benefit-features" style="margin-top: 15px">
+                <div class="benefit-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <a href="#" class="benefit-link">Примеры работ →</a>
+                </div>
               </div>
             </div>
           </div>
@@ -714,7 +716,7 @@
             </div>
             <div class="result-item">
               <div class="result-icon">
-                <i class="fas fa-hand-holding-heart"></i>
+                <i class="fas fa-headset"></i>
               </div>
               <div class="result-content">
                 <div class="result-value">24/7</div>
@@ -723,7 +725,7 @@
             </div>
             <div class="result-item">
               <div class="result-icon">
-                <i class="fas fa-smile"></i>
+                <i class="fas fa-check-circle"></i>
               </div>
               <div class="result-content">
                 <div class="result-value">100%</div>
